Fix header info spacing

--- a/src/layout/components/compare.sass
+++ b/src/layout/components/compare.sass
@@ -67,8 +67,7 @@
   text-align: center
   color: $color-black
   opacity: 0
-  +media($breakpoint-lg)
-    margin: 0
+  margin: 0
   +media($breakpoint-md)
     font-size: 20px
   +media($breakpoint-sm)
